# HAOS_PF

./: .cursorrules  .gitignore  AGENTS.md  CLAUDE.md  README.md  localtuya_configuration_data.md  lovelace_active.json  pyproject.toml
archive/lovelace_backups/: lovelace_pre_anbang_ceiling_light_update.json  lovelace_pre_live_sync_backup.json  (+16 more)
config/: entities_canonical.toml  policy.toml
data/: dashboard_cards.json  reco_engine.db
docs/: README.md  automation_agent_contract_v1.md  automation_agent_prompt_template.md  automation_external_inventory_v1.md  automation_osbang_presence_lighting_v1.md  automation_standard_v1.md  current_operating_map.md  device_onboarding_rules_v1.md  entity_priority_classification_2026-03-10.md  ha_entity_operations_2026-03-10.md  ios_shortcuts_inventory_v1.md  iot_network_portfolio_final_v2.md  iot_network_portfolio_master_v1.md  master_hardware_map_live.md  naming_standard_v1.md  portfolio_documentation_v1.md  portfolio_enhancement_recommendations_v1.md  portfolio_live_data_v1.md  portfolio_live_data_v2.md  portfolio_live_data_v3.md  portfolio_live_metrics_snapshot_v1.md  portfolio_onepage_self_intro_v1.md  python_environment_guide_v1.md  raw_system_inventory_v1.md  standardization_plan_anbang_v1.md  standardization_plan_geosil_v1.md  standardization_plan_hwajangsil_v1.md  standardization_plan_hyeongwan_v1.md  standardization_plan_jubang_v1.md  standardization_plan_osbang_v1.md  standardization_v1_complete.md
portfolio/: 01_project_summary.md
scripts/: README.md  add_anbang_heater_plug_tuya_local.py  rebuild_tuya_local_10_devices.py
(+203 files in other folders)
