[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "haos-reco-engine"
version = "0.1.0"
description = "Log/data-driven automation recommendation engine for Home Assistant"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.31.0",
]

[project.scripts]
reco-engine = "reco_engine.interfaces.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
